--- a/Web3GPT.html
+++ b/Web3GPT.html
@@ -1,78 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daily Earnings Calculator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            text-align: center;
-            margin: 50px;
-        }
-        .container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            margin: auto;
-        }
-        h2 {
-            color: #333;
-        }
-        label {
-            display: block;
-            font-weight: bold;
-            margin-top: 10px;
-            text-align: center;
-        }
-        input {
-            width: 100%;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            border: 1px solid #ddd;
-            text-align: center;
-            font-size: 16px;
-        }
-        input:focus {
-            border-color: #28a745;
-            outline: none;
-        }
-        button {
-            width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 5px;
-            border: none;
-            background-color: #28a745;
-            color: white;
-            font-size: 16px;
-            cursor: pointer;
-        }
-        button:hover {
-            background-color: #218838;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-            background: white;
-        }
-        th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: #28a745;
-            color: white;
-        }
-    </style>
-    <script>
-        function formatDate(date) {
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web3 GPT</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      text-align: center;
+      margin: 50px;
+    }
+
+    .container {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+      max-width: 400px;
+      margin: auto;
+    }
+
+    h2 {
+      color: #333;
+    }
+
+    label {
+      display: block;
+      font-weight: bold;
+      margin-top: 10px;
+      text-align: center;
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin: 5px 0;
+      border-radius: 5px;
+      border: 1px solid #ddd;
+      text-align: center;
+      font-size: 16px;
+    }
+
+    input:focus {
+      border-color: #28a745;
+      outline: none;
+    }
+
+    button {
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 5px;
+      border: none;
+      background-color: #28a745;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #218838;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      background: white;
+    }
+
+    th,
+    td {
+      border: 1px solid #ddd;
+      padding: 10px;
+      text-align: center;
+    }
+
+    th {
+      background-color: #28a745;
+      color: white;
+    }
+  </style>
+  <script>
+    function formatDate(date) {
             const options = { day: '2-digit', month: 'short', year: '2-digit' };
             return date.toLocaleDateString('en-GB', options).replace(/ /g, '-');
         }
@@ -112,31 +124,33 @@
             document.getElementById("startDate").value = getTodayDate();
             document.getElementById("startDate").style.textAlign = "center";
         };
-    </script>
+  </script>
 </head>
+
 <body>
-    <div class="container">
-        <h2>Daily Earnings Calculator</h2>
-        <label>First Amount ($):</label>
-        <input type="number" id="firstAmount" step="0.01" placeholder="Enter initial amount">
-        <label>First Date (DD-MMM-YYYY):</label>
-        <input type="date" id="startDate">
-        <label>Earning Percentage (%):</label>
-        <input type="number" id="earningPercentage" step="0.01" placeholder="Enter percentage">
-        <label>Number of Days:</label>
-        <input type="number" id="numDays" placeholder="Enter number of days">
-        <button onclick="calculateEarnings()">Calculate</button>
-    </div>
-    <table>
-        <thead>
-            <tr>
-                <th>No</th>
-                <th>Date</th>
-                <th>Increase Amount</th>
-                <th>Daily Earning</th>
-            </tr>
-        </thead>
-        <tbody id="results"></tbody>
-    </table>
+  <div class="container">
+    <h2>Web3GPT Earnings Calculator</h2>
+    <label>First Amount ($):</label>
+    <input type="number" id="firstAmount" step="0.01" placeholder="Enter initial amount">
+    <label>First Date (DD-MMM-YYYY):</label>
+    <input type="date" id="startDate">
+    <label>Earning Percentage (%):</label>
+    <input type="number" id="earningPercentage" step="0.01" placeholder="Enter percentage">
+    <label>Number of Days:</label>
+    <input type="number" id="numDays" placeholder="Enter number of days">
+    <button onclick="calculateEarnings()">Calculate</button>
+  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>No</th>
+        <th>Date</th>
+        <th>Increase Amount</th>
+        <th>Daily Earning</th>
+      </tr>
+    </thead>
+    <tbody id="results"></tbody>
+  </table>
 </body>
+
 </html>
