--- a/Web3GPT.html
+++ b/Web3GPT.html
@@ -132,7 +132,7 @@
     <h2>Web3GPT Earnings Calculator</h2>
     <label>First Amount ($):</label>
     <input type="number" id="firstAmount" step="0.01" placeholder="Enter initial amount">
-    <label>First Date (DD-MMM-YYYY):</label>
+    <label>First Date:</label>
     <input type="date" id="startDate">
     <label>Earning Percentage (%):</label>
     <input type="number" id="earningPercentage" step="0.01" placeholder="Enter percentage">
